--- a/DealsServerLogging/src/main/resources/messages_en.properties
+++ b/DealsServerLogging/src/main/resources/messages_en.properties
@@ -14,6 +14,7 @@ label.username=Username
 label.Password=Password
 label.ConfPassword=Confirm Password
 label.email=E-mail
+label.balance=Balance
 label.shopname=Shopname
 label.role=Role
 label.Photo=Upload photo
