--- a/DealsServerLogging/src/main/resources/messages_en.properties
+++ b/DealsServerLogging/src/main/resources/messages_en.properties
@@ -18,8 +18,8 @@ label.balance=Balance
 label.shopname=Shopname
 label.role=Role
 label.Photo=Upload photo
+label.assign=Assign
 
 label.register=Register
 
-label.delete=Delete
 
